--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,21 +4,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* border-bottom: 2px solid white;
-    border-left: 2px solid white;
-    border-right: 2px solid white; */
 }
 
 .bg {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: -1;
-    opacity: 0.1;
-    object-fit: contain;
-    min-height: 100vh;
+    opacity: 0.05;
+    object-fit: cover;
+    min-height: 100%;
     min-width: 100%;
     width: 100%;
+    height: auto;
 }
 
 .home-header {
